# Parallel-N-Body-Simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
Parallel-N-Body-Simulation/include/: nbody.h
Parallel-N-Body-Simulation/src/: common.c  mpi_nbody.c  openmp.c  serial.c
include/: nbody.h  nbody_common.h  nbody_io.h  nbody_types.h
results/: benchmark.csv  hybrid_output.csv
scripts/: plot_results.py  run_benchmarks.sh  verify_accuracy.py
src/: common.c  cuda_nbody.cu  hybrid.c  mpi.c  mpi_nbody.c  openmp.c  pthreads.c  serial.c  verify.c
